--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@react-native-community/cli": "^15.1.3",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
