--- a/app.json
+++ b/app.json
@@ -36,6 +36,9 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "EXPO_ROUTER_APP_ROOT": "./src"
     }
   }
 }
