--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.6.0",
+    "matter-js": "^0.20.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-game-engine": "^1.2.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
