--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-navigation/stack": "^7.2.10",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
-    "expo": "^52.0.44",
+    "expo": "^52.0.46",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
@@ -45,6 +45,7 @@
     "react-native": "0.76.7",
     "react-native-game-engine": "^1.2.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
@@ -52,7 +53,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "yet": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
