--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learning-kids1",
-  "main": "expo-router/entry",
+  "main": "expo/AppEntry.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -15,56 +15,57 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
-    "expo": "^52.0.47",
-    "expo-av": "~15.0.2",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.5",
-    "expo-font": "~13.0.3",
-    "expo-haptics": "~14.0.1",
-    "expo-image": "~2.0.7",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.21",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.9",
-    "expo-updates": "~0.27.4",
-    "expo-video": "~2.0.6",
-    "expo-web-browser": "~14.0.2",
+    "expo": "54.0.8",
+    "expo-av": "~16.0.7",
+    "expo-blur": "~15.0.7",
+    "expo-constants": "~18.0.9",
+    "expo-font": "~14.0.8",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.8",
+    "expo-linking": "~8.0.8",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.10",
+    "expo-video": "~3.0.11",
+    "expo-web-browser": "~15.0.7",
     "firebase": "^11.6.0",
+    "fs-extra": "^11.3.2",
     "matter-js": "^0.20.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-game-engine": "^1.2.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~4.1.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets-core": "1.6.2",
     "yet": "^0.1.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.1.13",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
-    "react-test-renderer": "18.3.1",
+    "jest-expo": "~54.0.11",
+    "react-test-renderer": "^19.1.0",
     "typescript": "^5.3.3"
   },
   "private": true
