--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/stack": "^7.2.10",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.10",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
@@ -49,6 +50,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-mmkv": "^3.3.3",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "~5.6.0",
