--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "ios": "expo run:ios"
   },
   "jest": {
     "preset": "jest-expo"
@@ -19,28 +19,30 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
-    "expo": "~54.0.10",
+    "expo": "54.0.13",
+    "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
+    "expo-image": "~3.0.9",
     "expo-linking": "~8.0.8",
-    "expo-router": "^6.0.8",
+    "expo-router": "~6.0.12",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
-    "expo-updates": "~29.0.11",
+    "expo-updates": "~29.0.12",
     "expo-video": "~3.0.11",
-    "expo-web-browser": "~15.0.7",
+    "expo-web-browser": "~15.0.8",
     "fs-extra": "^11.3.2",
     "matter-js": "^0.20.0",
     "react": "19.1.0",
@@ -51,7 +53,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-mmkv": "^3.3.3",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -63,6 +65,7 @@
     "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "1.6.2",
     "supabase": "^2.45.5",
+    "uuid": "^13.0.0",
     "yet": "^0.1.0",
     "zod": "^3.25.76",
     "zustand": "^5.0.3"
@@ -72,6 +75,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~19.1.13",
     "@types/react-test-renderer": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~54.0.12",
     "react-test-renderer": "^19.1.0",
