--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -31,11 +32,11 @@
     "date-fns": "^4.1.0",
     "expo": "54.0.13",
     "expo-auth-session": "~7.0.8",
-    "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
+    "expo-image-picker": "~17.0.8",
     "expo-keep-awake": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.12",
@@ -59,7 +60,6 @@
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
@@ -80,8 +80,11 @@
     "@types/react": "~19.1.13",
     "@types/react-test-renderer": "^18.3.0",
     "@types/uuid": "^10.0.0",
+    "expo-blur": "^15.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~54.0.12",
+    "react-native-parallax-scroll-view": "^0.21.3",
+    "react-native-safe-area-context": "^5.6.2",
     "react-test-renderer": "^19.1.0",
     "typescript": "^5.3.3"
   },
