--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "react-native-webview": "13.15.0",
     "react-native-worklets-core": "1.6.2",
     "yet": "^0.1.0",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@react-native-picker/picker": "2.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
