--- a/package.json
+++ b/package.json
@@ -26,33 +26,35 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
+    "@shopify/react-native-skia": "2.2.12",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
-    "expo": "54.0.13",
+    "expo": "54.0.23",
     "expo-auth-session": "~7.0.8",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.9",
+    "expo-image": "~3.0.10",
     "expo-image-picker": "~17.0.8",
     "expo-keep-awake": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.12",
+    "expo-router": "~6.0.14",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
+    "expo-system-ui": "~6.0.8",
     "expo-updates": "~29.0.12",
-    "expo-video": "~3.0.11",
-    "expo-web-browser": "~15.0.8",
+    "expo-video": "~3.0.14",
+    "expo-web-browser": "~15.0.9",
     "fs-extra": "^11.3.2",
     "matter-js": "^0.20.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-game-engine": "^1.2.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -61,6 +63,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.14.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.0",
@@ -68,6 +71,7 @@
     "react-native-worklet": "^0.0.0",
     "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "1.6.2",
+    "save-dev": "^0.0.1-security",
     "supabase": "^2.45.5",
     "uuid": "^13.0.0",
     "yet": "^0.1.0",
@@ -77,12 +81,13 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
+    "@types/matter-js": "^0.20.2",
     "@types/react": "~19.1.13",
     "@types/react-test-renderer": "^18.3.0",
     "@types/uuid": "^10.0.0",
     "expo-blur": "^15.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~54.0.12",
+    "jest-expo": "~54.0.13",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-safe-area-context": "^5.6.2",
     "react-test-renderer": "^19.1.0",
