--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Learning-Kids",
-    "slug": "Learning-Kids",
+    "slug": "learning-kids",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/app-logo.png",
@@ -16,7 +16,8 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.anonymous.LearningKids"
+      "package": "com.anonymous.LearningKids",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "bundler": "metro",
@@ -41,10 +42,18 @@
           "supportsPictureInPicture": true
         }
       ],
+      "expo-notifications",
       "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "49ea4518-45c3-42e0-a4e7-031fb9951375"
+      }
+    },
+    "owner": "learning_kids"
   }
 }
