--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
     "date-fns": "^4.1.0",
     "expo": "54.0.23",
     "expo-auth-session": "~7.0.8",
-    "expo-constants": "~18.0.9",
+    "expo-constants": "~18.0.10",
+    "expo-device": "~8.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-image-picker": "~17.0.8",
     "expo-keep-awake": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.14",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -63,7 +65,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.14.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.0",
