--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     "react-native-worklets-core": "1.6.2",
     "yet": "^0.1.0",
     "zustand": "^5.0.3",
-    "@react-native-picker/picker": "2.11.1"
+    "@react-native-picker/picker": "2.11.1",
+    "expo-print": "~15.0.7",
+    "expo-file-system": "~19.0.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
