--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
@@ -28,12 +29,15 @@
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
     "expo-device": "^8.0.9",
+    "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-notifications": "^0.32.12",
+    "expo-print": "~15.0.7",
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -64,10 +68,7 @@
     "react-native-webview": "13.15.0",
     "react-native-worklets-core": "1.6.2",
     "yet": "^0.1.0",
-    "zustand": "^5.0.3",
-    "@react-native-picker/picker": "2.11.1",
-    "expo-print": "~15.0.7",
-    "expo-file-system": "~19.0.17"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
