--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^7.2.10",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "date-fns": "^4.1.0",
     "expo": "54.0.8",
     "expo-av": "~16.0.7",
@@ -53,6 +54,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-game-engine": "^1.2.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-linear-gradient": "^2.8.3",
